--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,15 @@
 
 <body>
   <div class="container">
-    <!-- Main welcome messages -->
     <div>
       <h1>✏️📋 To Do List App 📋✏️</h1>
     </div>
 
     <% if (locals.tasks && locals.listName) { %>
+
     <h2> You have <%= locals.tasks.length %> items in your <%= locals.listName %> task list.</h2>
 
+    <!-- List of tasks. -->
     <div class="taskDiv">
       <% for ( i=0; i < locals.tasks.length; i++ ) { %>
       <div class="task">
@@ -22,16 +23,25 @@
       </div>
       <% } %>
     </div>
-    <% } %>
 
+    <!-- Prune completed tasks. -->
+    <div class="pruneDiv">
+      <div>
+        <form action="/prune" method="post">
+          <button type="submit" name="listName" value="<%= locals.listName %>" list=""> 🗑️ Prune completed tasks </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Add new task item. -->
     <div class="newTaskDiv">
-      <!-- Add new task item. -->
       <form class="item" action="/" method="post">
-        <input class="newTaskInput" type="text" name="newItem" placeholder="Add a new task here" autocomplete="off">
+        <input type="text" name="newItem" placeholder="Add a new task here" autocomplete="off">
         <button type="submit" name="listName" value="<%= locals.listName %>" list=""> add task </button>
       </form>
     </div>
 
+    <% } %>
   </div>
 </body>
 
