Tweaks to debug. Tweaks to button text.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
     <div class="pruneDiv">
       <div>
         <form action="/prune" method="post">
-          <button type="submit" name="listName" value="<%= locals.listName %>" list=""> 🗑️ Prune completed tasks 🗑️ </button>
+          <button type="submit" name="listName" value="<%= locals.listName %>" list=""> 🗑️ Prune Completed Tasks 🗑️ </button>
         </form>
       </div>
     </div>
@@ -38,7 +38,7 @@
     <div class="newTaskDiv">
       <form class="item" action="/" method="post">
         <input type="text" name="newItem" placeholder="Add a new task here" autocomplete="off">
-        <button type="submit" name="listName" value="<%= locals.listName %>" list=""> add task </button>
+        <button type="submit" name="listName" value="<%= locals.listName %>" list=""> Add Task </button>
       </form>
     </div>
 
