--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -30,7 +30,7 @@ h2 {
 }
 
 .taskDiv,
-.pruneDiv,
+.taskActionsDiv,
 .newTaskDiv {
   border: solid 2px black;
   border-radius: 5px;
@@ -44,13 +44,13 @@ h2 {
 }
 
 .newTaskDiv,
-.pruneDiv {
+.taskActionsDiv {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.pruneDiv {
+.taskActionsDiv {
   border: none;
   justify-content: center;
 }
@@ -105,7 +105,7 @@ button {
   max-width: 80px;
 }
 
-.pruneDiv button {
+.taskActionsDiv button {
   background-color: lightcoral;
   max-width: 250px;
 }
