--- a/views/register.ejs
+++ b/views/register.ejs
@@ -31,7 +31,7 @@
         <div class="card-body">
           <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
-            Register via Google
+            Register using Google
           </a>
         </div>
 
