--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,7 +31,7 @@
         <div class="card-body">
           <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
             <i class="fab fa-google"></i>
-            Sign in via Google
+            Login using Google
           </a>
         </div>
       </div>
